<resources>
    <string name="app_name">UTS_IF6_10120215_Rahma Yuniar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="music_favorite_amp_video"><![CDATA[Music Favorite & Video]]></string>
    <string name="profile">Profile</string>
    <string name="hai_ma_nbagaimana_hari_ini">Hai Ma!\nBagaimana hari ini?</string>
    <string name="progres_pekerjaan">Progres Pekerjaan</string>
    <string name="sedang_n50">Sedang\n50%</string>
    <string name="sudah_n30">Sudah\n30%</string>
    <string name="belum_n20">Belum\n20%</string>
    <string name="progres_pekerjaan_hari_ini">Progres Pekerjaan Hari Ini</string>
    <string name="mengerjakan_tugas_akb">Mengerjakan Tugas Akb</string>
    <string name="dengan_celvyn">Dengan Celvyn</string>
    <string name="friend_list">Friend List</string>
    <string name="submit_quiz_akb">Submit Quiz Akb</string>
    <string name="dengan_persentase_80">Dengan Persentase 80%</string>
    <string name="membaca_novel_bumi_terel_liye">Membaca Novel Bumi - Terel liye</string>
    <string name="dengan_persentase_menyelesaikan_100">Dengan Persentase Menyelesaikan 100%</string>
    <string name="random_photos">Random Photos</string>
    <string name="building">Building</string>
    <string name="exhibition">exhibition</string>
    <string name="streets">Streets</string>
    <string name="portrait">Portrait</string>
    <string name="rahma_yuniar_20">Rahma Yuniar,20</string>
    <string name="lampung_indonesia">Lampung,Indonesia</string>
    <string name="height_155_cm">Height : 155 cm</string>
    <string name="weight_52_kg">Weight : 52 kg</string>
    <string name="welcome_back_n_rahma">Welcome Back,\n Rahma!</string>
    <string name="recently_played">Recently Played</string>
    <string name="limbo_nkeshi">Limbo -\nKeshi</string>
    <string name="cupid_nfifty_fifty">Cupid -\nFifty Fifty</string>
    <string name="komang_nraim_laode">Komang -\nRaim Laode</string>
    <string name="to_the_bone_npamungkas">To The Bone -\nPamungkas</string>
    <string name="until_i_found_you_nstephen_sanchez">Until I Found You -\nStephen Sanchez</string>
    <string name="somebody_s_pleasure_naziz_hedra">Somebody\'s Pleasure -\nAziz Hedra</string>
    <string name="marvin_gaye_ncharlie_puth">Marvin Gaye -\nCharlie Puth</string>
    <string name="marry_you_nbruno_mars">Marry You -\nBruno Mars</string>
    <string name="rahma_yuniar_n20_female">Rahma Yuniar\n20,Female</string>
    <string name="contact_me_via">Contact Me Via</string>
    <string name="find_me">Find Me</string>
    <string name="Deskripsi">Hi, my name is Rahma Yuniar, since college I have been called ama.\nI really like capturing moments with a camera, and on campus I take part in an UKM glosarium that discusses the world of photography.</string>
    <string name="interest">Interest</string>
    <string name="swimming">Swimming</string>
    <string name="basketball">Basketball</string>
    <string name="reading">Reading</string>
    <string name="halo">Halo</string>
    <string name="coding">Coding</string>
    <string name="welcome_to_nmyself_app_rahma_yuniar">Welcome to\nMyself-App Rahma Yuniar</string>
    <string name="self_made_to_nfulfill_the_assignment_of_the_akb_course">Self-made to\nfulfill the assignment of the AKB course</string>
    <string name="welcome_to_myself_app">Welcome to MySelf-App</string>
    <string name="my_self_app_has_several_menus_namely_nhome_containing_interests_daily_activities_containing_friend_lists_and_activities_that_ni_did_that_day">My-self App has several menus, namely\nhome containing interests, daily activities containing friend lists and activities that\nI did that day.</string>
    <string name="my_self_app_also_has_menus_gallery_with_random_photos_music_and_videos_and_finally_profile_little_information_about_me">My-Self App also has menus Gallery with random photos, music and videos, and finally profile little information about me</string>
    <string name="so_enjoy">So Enjoy!!</string>
    <string name="masuk">Masuk</string>
    <string name="rahma_yuniar_n21_female">Rahma Yuniar\n21,Female</string>
    <string name="whastapp">WhastApp</string>
    <string name="email">Email</string>
    <string name="kopo_safira_residence_blok_d5_nmargahayu_tengah">Kopo Safira Residence Blok D5,\nMargahayu Tengah</string>
    <string name="find_me1">Find Me</string>
    <string name="show_dialog">Show Dialog</string>
</resources>